--- a/src/wp-content/plugins/custom-store-map/css/custom-store-map.css
+++ b/src/wp-content/plugins/custom-store-map/css/custom-store-map.css
@@ -4,13 +4,16 @@
 
 .store-list {
     width: 30%;
-    padding: 20px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
     max-height: 500px;
 }
 .store-item{
-    margin: 10px 0;
+    padding: 15px;
+}
+.store-item.active {
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
 }
 
 #custom-map {
@@ -19,6 +22,19 @@
 }
 #store-search{
     width: 100%;
+    height: 50px;
     padding: 5px 10px;
-    margin-bottom: 30px;
+}
+/* Class Css */
+.d-flex {
+    display: flex;
+}
+.align-items-center {
+    align-items: center;
+}
+.justify-content-between {
+    justify-content: space-between;
+}
+.justify-content-center {
+    justify-content: center;
 }
