--- a/src/wp-content/plugins/custom-store-map/css/custom-store-map.css
+++ b/src/wp-content/plugins/custom-store-map/css/custom-store-map.css
@@ -1,41 +1,43 @@
 .store-map-container {
-    display: flex;
+  display: flex;
 }
 
 .store-list {
-    width: 30%;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    overflow-y: auto;
-    max-height: 500px;
+  width: 30%;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+  max-height: 500px;
 }
-.store-item{
-    padding: 15px;
-    cursor: pointer;
+.store-item {
+  padding: 15px;
+  cursor: pointer;
 }
 .store-item.active {
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
 }
-
+.store-address {
+  margin: 0 10px;
+}
 #custom-map {
-    width: 70%;
-    height: 500px;
+  width: 70%;
+  height: 500px;
 }
-#store-search{
-    width: 100%;
-    height: 50px;
-    padding: 5px 10px;
+#store-search {
+  width: 100%;
+  height: 50px;
+  padding: 5px 10px;
 }
 /* Class Css */
 .d-flex {
-    display: flex;
+  display: flex;
 }
 .align-items-center {
-    align-items: center;
+  align-items: center;
 }
 .justify-content-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 .justify-content-center {
-    justify-content: center;
+  justify-content: center;
 }
