remove hook short description

--- a/src/wp-content/themes/crafti-child/assets/sass/app.scss
+++ b/src/wp-content/themes/crafti-child/assets/sass/app.scss
@@ -459,7 +459,7 @@
   }
   
   .top_panel_title.sc_layouts_row.sc_layouts_row_type_normal{
-    display: none
+    display: none;
   }
   
   .message-join-membership h2{
